:tada: Version Final 1.0

--- a/Application Gestion/src/GUI/Atelier.form
+++ b/Application Gestion/src/GUI/Atelier.form
@@ -122,6 +122,9 @@
               <Properties>
                 <Property name="text" type="java.lang.String" value="Liste commandes"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="MenuItem_ListeCommandesActionPerformed"/>
+              </Events>
             </MenuItem>
           </SubComponents>
         </Menu>
