:tada: Version Final 1.1

--- a/Application Gestion/src/GUI/Atelier.form
+++ b/Application Gestion/src/GUI/Atelier.form
@@ -115,6 +115,9 @@
               <Properties>
                 <Property name="text" type="java.lang.String" value="R&#xe9;ceptionner"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="MenuItem_ReceptionnerActionPerformed"/>
+              </Events>
             </MenuItem>
             <MenuItem class="javax.swing.JPopupMenu$Separator" name="jSeparator4">
             </MenuItem>
@@ -132,6 +135,16 @@
           <Properties>
             <Property name="text" type="java.lang.String" value="Clients"/>
           </Properties>
+          <SubComponents>
+            <MenuItem class="javax.swing.JMenuItem" name="jMenuItem_AjouterClient">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="Ajouter"/>
+              </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jMenuItem_AjouterClientActionPerformed"/>
+              </Events>
+            </MenuItem>
+          </SubComponents>
         </Menu>
         <Menu class="javax.swing.JMenu" name="Menu_Facture">
           <Properties>
@@ -219,7 +232,7 @@
                               </Group>
                           </Group>
                       </Group>
-                      <EmptySpace type="unrelated" min="-2" max="-2" attributes="0"/>
+                      <EmptySpace type="unrelated" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
                           <Component id="TextField_Pont1" alignment="0" max="32767" attributes="0"/>
                           <Component id="TextField_Pont2" alignment="0" max="32767" attributes="0"/>
@@ -228,14 +241,16 @@
                           <Component id="TextField_Sol" alignment="0" max="32767" attributes="0"/>
                           <Component id="TextField_Divers" alignment="0" max="32767" attributes="0"/>
                       </Group>
-                      <EmptySpace min="-2" pref="45" max="-2" attributes="0"/>
-                      <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                          <Component id="jLabel_HoroDateHeure" max="32767" attributes="0"/>
-                          <Component id="ImageFond" max="32767" attributes="0"/>
-                      </Group>
+                      <EmptySpace min="-2" pref="57" max="-2" attributes="0"/>
+                      <Component id="ImageFond" min="-2" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
                   </Group>
               </Group>
+          </Group>
+          <Group type="102" alignment="1" attributes="0">
+              <EmptySpace max="32767" attributes="0"/>
+              <Component id="jLabel_HoroDateHeure" min="-2" pref="412" max="-2" attributes="0"/>
+              <EmptySpace max="-2" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -506,6 +521,8 @@
           <Font name="Dialog" size="18" style="1"/>
         </Property>
         <Property name="text" type="java.lang.String" value="Dates"/>
+        <Property name="horizontalTextPosition" type="int" value="4"/>
+        <Property name="iconTextGap" type="int" value="0"/>
       </Properties>
     </Component>
   </SubComponents>
