--- a/Application Gestion/src/GUI/Travail/AtelierAPrevoir.form
+++ b/Application Gestion/src/GUI/Travail/AtelierAPrevoir.form
@@ -186,6 +186,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="new"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="CheckBox_NewActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JRadioButton" name="RadioButtonEntretien">
       <Properties>
